TFP-5680 Opprette VK-oppgave for identifisert overlapp med sykepenger