@@ -2,7 +2,12 @@ package no.nav.foreldrepenger.mottak.vedtak.overlapp;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
@@ -12,6 +17,10 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+
+import no.nav.foreldrepenger.produksjonsstyring.oppgavebehandling.OppgaveTjeneste;
+
+import no.nav.vedtak.felles.integrasjon.spokelse.SykepengeVedtak;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -69,6 +78,10 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
     private InfotrygdPSGrunnlag infotrygdPSGrTjenesteMock;
     @Mock
     private InfotrygdSPGrunnlag infotrygdSPGrTjenesteMock;
+    @Mock
+    private Spøkelse spøkelseMock;
+    @Mock
+    private OppgaveTjeneste oppgaveTjenesteMock;
 
     private Behandling behandlingFP;
     private LocalDate førsteUttaksdatoFp;
@@ -81,7 +94,7 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository = new BeregningsresultatRepository(getEntityManager());
         overlappendeInfotrygdYtelseTjeneste = new LoggOverlappEksterneYtelserTjeneste(null,
             beregningsresultatRepository, personinfoAdapter, infotrygdPSGrTjenesteMock, infotrygdSPGrTjenesteMock,
-            mock(AbakusTjeneste.class), mock(Spøkelse.class), overlappRepository, behandlingRepository);
+            mock(AbakusTjeneste.class), spøkelseMock, overlappRepository, behandlingRepository, oppgaveTjenesteMock);
         førsteUttaksdatoFp = LocalDate.now().minusMonths(4).minusWeeks(2);
         førsteUttaksdatoFp = VirkedagUtil.fomVirkedag(førsteUttaksdatoFp);
 
@@ -118,13 +131,13 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository.lagre(behandlingFP, berFp);
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
         assertThat(overlappIT).hasSize(1);
-        assertThat(overlappIT.get(0).getPeriode().getTomDato()).isEqualTo(førsteUttaksdatoFp);
+        assertThat(overlappIT.getFirst().getPeriode().getTomDato()).isEqualTo(førsteUttaksdatoFp);
+        verifyNoInteractions(oppgaveTjenesteMock);
     }
 
     @Test
@@ -143,8 +156,7 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository.lagre(behandlingFP, berFp);
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
@@ -160,13 +172,13 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         when(infotrygdPSGrTjenesteMock.hentGrunnlag(any(), any(), any())).thenReturn(List.of(infotrygPSGrunnlag2));
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT2 = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
         assertThat(overlappIT2).hasSize(1);
-        assertThat(overlappIT2.get(0).getPeriode().getTomDato()).isEqualTo(førsteUttaksdatoFp.plusWeeks(4));
+        assertThat(overlappIT2.getFirst().getPeriode().getTomDato()).isEqualTo(førsteUttaksdatoFp.plusWeeks(4));
+        verifyNoInteractions(oppgaveTjenesteMock);
     }
 
     @Test
@@ -198,12 +210,55 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository.lagre(behandlingFP, berFp);
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
         assertThat(overlappIT).hasSize(2);
+        verifyNoInteractions(oppgaveTjenesteMock);
+    }
+
+    @Test
+    void nyeSykepengerOverlappIlisten() {
+        LOG.info("3");
+
+        behandlingFP = avsluttetBehandlingMor().lagre(repositoryProvider);
+
+        List<Vedtak> vedtakPerioderIT = new ArrayList<>();
+        vedtakPerioderIT.add(
+            lagVedtakForGrunnlag(førsteUttaksdatoFp.minusWeeks(4), førsteUttaksdatoFp.minusWeeks(3), 100));
+        vedtakPerioderIT.add(
+            lagVedtakForGrunnlag(førsteUttaksdatoFp.minusWeeks(3), førsteUttaksdatoFp.minusWeeks(2), 100));
+        vedtakPerioderIT.add(
+            lagVedtakForGrunnlag(førsteUttaksdatoFp.minusWeeks(3), førsteUttaksdatoFp.minusWeeks(2), 100));
+        vedtakPerioderIT.add(lagVedtakForGrunnlag(førsteUttaksdatoFp.minusWeeks(1), førsteUttaksdatoFp, 100));
+
+        var infotrygSPGrunnlag = lagGrunnlagSPIT(førsteUttaksdatoFp.minusWeeks(4), førsteUttaksdatoFp, vedtakPerioderIT);
+
+        List<SykepengeVedtak.SykepengeUtbetaling> utbetalingsperioderSyk = new ArrayList<>();
+
+        utbetalingsperioderSyk.add(new SykepengeVedtak.SykepengeUtbetaling(førsteUttaksdatoFp.minusWeeks(3), førsteUttaksdatoFp, BigDecimal.valueOf(100)));
+        utbetalingsperioderSyk.add(new SykepengeVedtak.SykepengeUtbetaling(førsteUttaksdatoFp.plusWeeks(1), førsteUttaksdatoFp.plusWeeks(2), BigDecimal.valueOf(100)));
+        var sykepengerVedtak  = (lagSykVedtak(utbetalingsperioderSyk, LocalDateTime.now()));
+
+        when(infotrygdPSGrTjenesteMock.hentGrunnlag(any(), any(), any())).thenReturn(Collections.emptyList());
+        when(infotrygdSPGrTjenesteMock.hentGrunnlag(any(), any(), any())).thenReturn(List.of(infotrygSPGrunnlag));
+        when(spøkelseMock.hentGrunnlag(any(), any(), any())).thenReturn(List.of(sykepengerVedtak));
+
+        var berFp = lagBeregningsresultatFP(førsteUttaksdatoFp, førsteUttaksdatoFp.plusMonths(5));
+        beregningsresultatRepository.lagre(behandlingFP, berFp);
+
+        // Act
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
+
+        // Assert
+        var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
+        assertThat(overlappIT).hasSize(3);
+        verify(oppgaveTjenesteMock, times(1)).opprettVurderKonsekvensHosSykepenger(any(), any(), any());
+    }
+
+    private SykepengeVedtak lagSykVedtak(List<SykepengeVedtak.SykepengeUtbetaling> sykUtbetalinger, LocalDateTime vedtattTid) {
+        return new SykepengeVedtak( "ref", sykUtbetalinger, vedtattTid);
     }
 
     @Test
@@ -232,8 +287,7 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository.lagre(behandlingFP, berFp);
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
@@ -258,8 +312,7 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository.lagre(behandlingFP, berFp);
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
@@ -277,8 +330,7 @@ class LoggOverlappEksterneYtelserTjenesteTest extends EntityManagerAwareTest {
         beregningsresultatRepository.lagre(behandlingFP, berFp);
 
         // Act
-        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP.getId(),
-            behandlingFP.getFagsak().getSaksnummer(), behandlingFP.getAktørId());
+        overlappendeInfotrygdYtelseTjeneste.loggOverlappForVedtakFPSAK(behandlingFP);
 
         // Assert
         var overlappIT = overlappRepository.hentForSaksnummer(behandlingFP.getFagsak().getSaksnummer());
